Fix header button on mobile

--- a/themes/portfolique/assets/css/site.css
+++ b/themes/portfolique/assets/css/site.css
@@ -15,6 +15,12 @@
   color: #000000;
 }
 
+@media (max-width: 1024px){
+  .fullWidthButton {
+    width: calc(100% - 24px);
+  }
+}
+
 /* Sharing Buttons */
 
 .resp-sharing-button__link,
